[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main_menu.gd" type="Script" id=1]

[node name="Main_menu" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Host_button" type="Button" parent="CanvasLayer"]
margin_left = 238.0
margin_top = 56.0
margin_right = 302.0
margin_bottom = 76.0
text = "Host"

[node name="Connect_button" type="Button" parent="CanvasLayer"]
margin_left = 223.0
margin_top = 541.0
margin_right = 287.0
margin_bottom = 561.0
text = "Connect"

[node name="Player_name_input" type="LineEdit" parent="CanvasLayer"]
margin_left = 43.0
margin_top = 23.0
margin_right = 206.0
margin_bottom = 77.0
max_length = 32
expand_to_text_length = true
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "Name"
caret_blink = true

[node name="Server_ip_input" type="LineEdit" parent="CanvasLayer"]
margin_left = 28.0
margin_top = 515.0
margin_right = 191.0
margin_bottom = 569.0
max_length = 256
expand_to_text_length = true
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "IP"
caret_blink = true

[node name="Quit_button" type="Button" parent="CanvasLayer"]
margin_left = 931.0
margin_top = 553.0
margin_right = 966.0
margin_bottom = 573.0
text = "Exit"

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 923.0
margin_top = 515.0
margin_right = 986.0
margin_bottom = 535.0
text = "Settings"

[connection signal="pressed" from="CanvasLayer/Host_button" to="." method="_on_Host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Connect_button" to="." method="_on_Connect_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit_button" to="." method="_on_Quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
